[package]
name = "aspen-wasm-guest-sdk"
version = "0.1.0"
edition = "2024"
description = "Guest SDK for building Aspen WASM handler plugins"
license = "AGPL-3.0-or-later"

[dependencies]
aspen-client-api = { path = "../../../aspen-client-api/crates/aspen-client-api", default-features = false }
aspen-plugin-api = { path = "../../../aspen-plugin-api/crates/aspen-plugin-api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
